--- a/style.css
+++ b/style.css
@@ -10,11 +10,28 @@
     padding: 24px 0;
 }
 .cabecalho-imagem{
-    width: 20%;
+    width: 30%;
 }
 .cabecalho-lista-item{
     display: inline-block;
     margin:0 16px;
     padding: 24px 0;
     font-size: 24px;
+}
+.escola-imagem{
+    width: 25%;
+}
+.escola{
+    background-image: linear-gradient(#383D58, #7c28db);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+.escola-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px 0;
 }
