--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     font-family: "Poppins", sans-serif;
 }
 .cabecalho{
-    background-color: #383D58;
+    background-color: #ff0000;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -25,7 +25,7 @@ body{
     width: 25%;
 }
 .escola{
-    background-image: linear-gradient(#383D58, #7c28db);
+    background-image: linear-gradient(#ff0000, #bd2424);
     color: white;
     display: flex;
     justify-content: center;
@@ -43,4 +43,12 @@ body{
 }
 .estudante-icone{
     width: 30px;
+}
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
 }
