--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 .cabecalho{
     background-color: #ff0000;
-    color: white;
+    color:black;
     display: flex;
     justify-content: space-around;
     padding: 24px 0;
@@ -22,15 +22,15 @@ body{
     font-size: 24px;
 }
 .escola-imagem{
-    width: 25%;
+    width: 20%;
 }
 .escola{
-    background-image: linear-gradient(#ff0000, #bd2424);
+    background-image: linear-gradient(#ff0000, #a82424);
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 24px 0;
+    padding: 100px 0;
 }
 .escola-conteudo{
     width: 35%;
@@ -39,7 +39,7 @@ body{
     padding: 24px 0;
 }
 .estudante-imagem{
-    width: 120px;
+    width: 200px;
 }
 .estudante-icone{
     width: 30px;
